# lwt-effects-bench

./: README-2026-06-poc.md  README.md  dune-project
http/: ab.sh  alice.ml  dune  httpun_handler.ml  json.lua  run.sh  server_cohttp_eio.ml  server_cohttp_lwt.ml  server_httpcats.ml  server_httpun_eio.ml  server_httpun_lwt.ml
http/results/: httpun-plain-classic-libev-r1.txt  httpun-plain-classic-libev-r2.txt  httpun-plain-classic-uring-r1.txt  httpun-plain-classic-uring-r2.txt  httpun-plain-effects-libev-r1.txt  httpun-plain-effects-libev-r2.txt  httpun-plain-effects-uring-r1.txt  httpun-plain-effects-uring-r2.txt  httpun-plain-eio-r1.txt  httpun-plain-eio-r2.txt  httpun-retro20k-classic-libev-r1.txt  httpun-retro20k-classic-libev-r2.txt  httpun-retro20k-classic-uring-r1.txt  httpun-retro20k-classic-uring-r2.txt  httpun-retro20k-effects-libev-r1.txt  httpun-retro20k-effects-libev-r2.txt  httpun-retro20k-effects-uring-r1.txt  httpun-retro20k-effects-uring-r2.txt  httpun-retro20k-eio-r1.txt  httpun-retro20k-eio-r2.txt  plain-cohttp-eio-run1.txt  plain-cohttp-eio-run2.txt  plain-httpcats-d1-run1.txt  plain-httpcats-d1-run2.txt  plain-lwt-classic-libev-run1.txt  plain-lwt-classic-libev-run2.txt  plain-lwt-classic-uring-run1.txt  plain-lwt-classic-uring-run2.txt  plain-lwt-effects-libev-run1.txt  plain-lwt-effects-libev-run2.txt  plain-lwt-effects-uring-run1.txt  plain-lwt-effects-uring-run2.txt  plain2-classic-libev-r1.txt  plain2-classic-libev-r2.txt  plain2-classic-uring-r1.txt  plain2-classic-uring-r2.txt  plain2-effects-libev-r1.txt  plain2-effects-libev-r2.txt  (+50 more)
(+61 files in other folders)
