(executables
 (names server_cohttp_lwt server_cohttp_eio server_httpcats
        server_httpun_lwt server_httpun_eio)
 (modules alice httpun_handler
          server_cohttp_lwt server_cohttp_eio server_httpcats
          server_httpun_lwt server_httpun_eio)
 (libraries
  lwt
  lwt.unix
  lwt_uring
  cohttp
  cohttp-lwt-unix
  conduit-lwt-unix
  cohttp-eio
  eio
  eio_main
  eio.unix
  logs
  logs.fmt
  httpcats
  h1
  httpun
  httpun-lwt-unix
  httpun-eio
  gluten
  miou
  miou.unix
  uri
  unix))
